[tool.poetry]
name = "unodit"
version = "0.8.0"
description = "help to create extensions for LibreOffice"
license = "GPL-3.0-or-later"
authors = ["Sasa Kelecevic <sasakelecevic@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kelsa-pi/unodit"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
